Page content properties have been added.

--- a/src/main/resources/prop/pagecontent_ru_RU.properties
+++ b/src/main/resources/prop/pagecontent_ru_RU.properties
@@ -2,3 +2,4 @@ title.main = \u0418\u043d\u0442\u0435\u0440\u043d\u0435\u0442 \u0431\u0430\u0437
 title.login = Sign in with IMDb
 title.signup = IMDb Registration
 title.verify_email = Authentication required
+title.get_users = Users list
