--- a/src/main/resources/prop/pagecontent_ru_RU.properties
+++ b/src/main/resources/prop/pagecontent_ru_RU.properties
@@ -13,13 +13,10 @@ title.get_movie_list = \u0424\u0438\u043b\u044c\u043c\u044b \u0438 \u0441\u0435\
 title.verify_email = \u0422\u0440\u0435\u0431\u0443\u0435\u0442\u0441\u044f \u0430\u0443\u0442\u0435\u043d\u0442\u0438\u0444\u0438\u043a\u0430\u0446\u0438\u044f
 title.main = \u0049\u006e\u0074\u0065\u0072\u006e\u0065\u0074 \u004d\u006f\u0076\u0069\u0065 \u0044\u0061\u0074\u0061\u0062\u0061\u0073\u0065\u003a \u0420\u0435\u0439\u0442\u0438\u043d\u0433\u0438 \u0438 \u043e\u0442\u0437\u044b\u0432\u044b
 
-get_feedbacks.table.number = #
-get_feedbacks.table.login = \u041b\u043e\u0433\u0438\u043d
 get_feedbacks.button.block = \u0417\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u0442\u044c
 get_feedbacks.table.content = \u041e\u0442\u0437\u044b\u0432
 get_feedbacks.button.approve = \u041e\u0434\u043e\u0431\u0440\u0438\u0442\u044c
 
-get_users.table.number = #
 get_users.table.role = \u0420\u043e\u043b\u044c
 get_users.button.bane = \u0417\u0430\u0431\u0430\u043d\u0438\u0442\u044c
 get_users.table.login = \u041b\u043e\u0433\u0438\u043d
@@ -42,6 +39,16 @@ add_feedback.score = \u041e\u0446\u0435\u043d\u043a\u0430
 add_feedback.button.post = \u041e\u0442\u043f\u0440\u0430\u0432\u0438\u0442\u044c
 add_feedback.feedback = \u041e\u0442\u0437\u044b\u0432
 add_feedback.review.of = \u041e\u0442\u0437\u044b\u0432 \u043d\u0430
+add_feedback.score.one = \u043e\u0434\u0438\u043d
+add_feedback.score.two = \u0434\u0432\u0430
+add_feedback.score.three = \u0442\u0440\u0438
+add_feedback.score.four = \u0447\u0435\u0442\u044b\u0440\u0435
+add_feedback.score.five = \u043f\u044f\u0442\u044c
+add_feedback.score.six = \u0448\u0435\u0441\u0442\u044c
+add_feedback.score.seven = \u0441\u0435\u043c\u044c
+add_feedback.score.eight = \u0432\u043e\u0441\u0435\u043c\u044c
+add_feedback.score.nine = \u0434\u0435\u0432\u044f\u0442\u044c
+add_feedback.score.ten = \u0434\u0435\u0441\u044f\u0442\u044c
 
 login.label.login = \u041b\u043e\u0433\u0438\u043d
 login.label.password = \u041f\u0430\u0440\u043e\u043b\u044c
@@ -54,6 +61,14 @@ get_movie.button.delete = \u0423\u0434\u0430\u043b\u0438\u0442\u044c
 get_movie.button.edit.movie.cover = \u0418\u0437\u043c\u0435\u043d\u0438\u0442\u044c \u043e\u0431\u043b\u043e\u0436\u043a\u0443
 get_movie.message.sign.in.to.see.reviews = \u0412\u043e\u0439\u0434\u0438\u0442\u0435\u002c \u0447\u0442\u043e\u0431\u044b \u0443\u0432\u0438\u0434\u0435\u0442\u044c \u043e\u0442\u0437\u044b\u0432\u044b\u0021
 get_movie.message.you.have.already.left.review = \u0412\u044b \u0443\u0436\u0435 \u043e\u0441\u0442\u0430\u0432\u0438\u043b\u0438 \u043e\u0442\u0437\u044b\u0432\u0021
+get_movie.text.movie.title = \u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435\u003a
+get_movie.text.movie.logline = \u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435\u003a
+get_movie.text.movie.release.year = \u0413\u043e\u0434\u003a
+get_movie.text.movie.score = \u0420\u0435\u0439\u0442\u0438\u043d\u0433\u003a
+get_movie.text.movie.genre = \u0416\u0430\u043d\u0440\u003a
+
+get_movie_list.sign.in.to.see.rating = \u0412\u043e\u0439\u0434\u0438\u0442\u0435 \u0447\u0442\u043e\u0431\u044b \u0443\u0432\u0438\u0434\u0435\u0442\u044c \u0440\u0435\u0439\u0442\u0438\u043d\u0433
+get_movie_list.text.rating = \u0420\u0435\u0439\u0442\u0438\u043d\u0433
 
 signup.label.name = \u0418\u043c\u044f
 signup.label.login = \u041b\u043e\u0433\u0438\u043d
